force-app/main/default/objects/Review__c/fields/Actual_Rating__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rating__c</fullName>
    <label>Actual Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>