force-app/main/default/objects/Review__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <formula>Vehicle__r.Model_Number__c</formula>
    <label>Model Number</label>
    <type>Text</type>
</CustomField>