force-app/main/default/objects/Review__c/fields/Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to test drive obj.</description>
    <label>Test Drive</label>
    <referenceTo>Test_Drive__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>